# jupyter_spaces

./: .gitignore  .travis.yml  LICENSE.txt  README.md  dev-requirements.txt  makefile  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml  test.yml
jupyter_spaces/: __init__.py  errors.py  magics.py  space.py
requirements/: dev_requirements.txt  lint.txt  test.txt
tests/: conftest.py  fixtures.py  test_magics.py  test_space.py  utils.py
