[metadata]
name = jupyter_spaces
version = 0.3.0
author = Davide Sarra
description = Create parallel namespaces in Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    jupyter
    ipython
    magic
    extension
    namespace
url = https://github.com/davidesarra/jupyter_spaces
license = MIT
license_files =
    LICENSE.txt
classifiers =
    Environment :: Console
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
python_requires = >=3.6
install_requires =
    ipython>=5.0.0

[options.extras_require]
lint =
    black==22.10.0
    isort==5.10.1
test =
    pytest>=7.0.1
    pytest-cov==4.0.0
    tox==3.27.0

[options.packages.find]
where = src

[tool:pytest]
addopts =
    -vvv
    --cov=jupyter_spaces
    --cov-report=xml
    --cov-report=term-missing
    --cov-branch
testpaths =
    tests
